<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundDarkBlue"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_reset_password_image_logo"
            android:src="@drawable/icon_just_logo"
            android:layout_gravity="center"
            android:layout_marginTop="125dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_password"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorWhiteText"
            fontPath="fonts/GothamPro.ttf"/>

        <TextView
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_tip"
            android:textColor="#727C88"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="286dp"
            android:layout_height="50dp"
            android:text="@string/reset_password_ok"
            android:textColor="@drawable/selector_white_gray"
            android:layout_gravity="center"
            android:gravity="center"
            fontPath="fonts/GothamProBold.ttf"
            android:id="@+id/fragment_reset_password_tv_accept"
            android:background="@drawable/ripple_effect"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="9dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/reset_password_back"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="10sp"
                android:textColor="#10b4fa"
                android:letterSpacing="0.09"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                fontPath="fonts/GothamProBold.ttf"
                android:id="@+id/fragment_reset_password_tv_back"/>
            <FrameLayout
                android:layout_width="43dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBlueTextTransparent30"
                android:layout_marginTop="-14dp">
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>