<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_dark_blue_to_blue"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bleeping_dot_50"
                android:layout_marginLeft="10dp"
                android:id="@+id/dot_one"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bleeping_dot_20"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:id="@+id/dot_two"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bleeping_dot_10"
                android:id="@+id/dot_three"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incoming_call_title"
            android:textColor="@color/colorWhiteText"
            android:textSize="10sp"
            android:layout_weight="1"
            android:gravity="center"
            android:letterSpacing="0.09"
            fontPath="fonts/GothamProBold.ttf"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"

            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bleeping_dot_10"
                android:id="@+id/dot_four"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bleeping_dot_20"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:id="@+id/dot_five"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bleeping_dot_50"
                android:layout_marginRight="10dp"
                android:id="@+id/dot_six"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outgoing_call_title_call_type"
        android:textColor="@color/colorWhiteText"
        android:textSize="10sp"
        android:letterSpacing="0.09"
        fontPath="fonts/GothamProBold.ttf"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2">
    </FrameLayout>

    <FrameLayout
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:background="@drawable/profile_icon_circle_cover_inc"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:id="@+id/outgoing_call_profile_icon" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming_call_profile_name"
        android:textColor="@color/colorWhiteText"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:minLines="2"
        android:textSize="24sp"
        fontPath="fonts/GothamPro.ttf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/incoming_call_department"
        android:textColor="@color/colorWhiteText"
        android:textSize="10sp"
        android:letterSpacing="0.09"
        android:layout_marginTop="16dp"
        fontPath="fonts/GothamPro.ttf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/incoming_call_position"
        android:textColor="@color/colorWhiteText"
        android:textSize="10sp"
        android:letterSpacing="0.09"
        android:layout_marginTop="10dp"
        fontPath="fonts/GothamPro.ttf"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="22dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="18dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/call_button_background"
                android:layout_gravity="center"
                android:id="@+id/button_loudspeaker">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/loudspeaker"
                    android:id="@+id/icon_loudspeaker"
                    android:layout_gravity="center"
                    />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incoming_call_first_icon"
                android:textColor="@color/colorWhiteText"
                android:textSize="10sp"
                android:letterSpacing="0.09"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/call_button_background"
                android:layout_gravity="center"
                android:id="@+id/button_message">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/message"
                    android:layout_gravity="center"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incoming_call_second_icon"
                android:textColor="@color/colorWhiteText"
                android:textSize="10sp"
                android:letterSpacing="0.09"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginRight="18dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/call_button_background"
                android:layout_gravity="center"
                android:id="@+id/button_mute">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mute"
                    android:id="@+id/icon_mute"
                    android:layout_gravity="center"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mute_text"
                android:text="@string/incoming_call_third_icon"
                android:textColor="@color/colorWhiteText"
                android:textSize="10sp"
                android:letterSpacing="0.09"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/call_button_background_red"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:id="@+id/button_end_call">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/end_call"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming_call_end_icon"
        android:textColor="@color/colorWhiteText"
        android:textSize="10sp"
        android:letterSpacing="0.09"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10sp"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </FrameLayout>

</LinearLayout>